--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="member-name"></div>
+        <div class="member-role"></div>
+        <div class="member-photo"></div>
+    </div>
 </body>
 <script type="text/javascript" src="functions.js"></script>
 <script type="text/javascript" src="myscript.js"></script>
